--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/hualongdai/babel#readme",
   "devDependencies": {
+    "@babel/code-frame": "^7.14.5",
     "@babel/generator": "^7.14.3",
     "@babel/parser": "^7.14.4",
-    "@babel/traverse": "^7.14.2"
+    "@babel/traverse": "^7.14.2",
+    "chalk": "^4.1.1"
   }
 }
